--- a/src/content/hikvision/content-3.mdx
+++ b/src/content/hikvision/content-3.mdx
@@ -6,6 +6,8 @@ desc: "4 MP Varifocal Bullet Network Camera with EXIR 2.0 Technology"
 price: 120.00
 currency: AED
 availability: in_stock
+brand: hikvision
+imgurl: "/assets/hikvision/DS-2CD1123G2-LIU(F)/DS-2CD1123G2-LIU(F) (2).png"
 img: "/src/assets/camera/hikvision/DS-2CD1643G0-I(Z)/DS-2CD1643G0-I(Z) (2).png"
 images:
   - "/src/assets/camera/hikvision/DS-2CD1643G0-I(Z)/DS-2CD1643G0-I(Z) (2).png"
