--- a/src/content/hikvision/content-8.mdx
+++ b/src/content/hikvision/content-8.mdx
@@ -7,7 +7,7 @@ price: 120.00
 currency: AED
 availability: in_stock
 brand: hikvision
-imgurl: "/assets/hikvision/DS-2CD1123G2-LIU(F) (2).png"
+imgurl: "/assets/hikvision/DS-2CD1123G2-LIU(F)/DS-2CD1123G2-LIU(F) (2).png"
 img: "/src/assets/camera/hikvision/DS-7616NI-Q2_16P/DS-7616NI-Q2_16P.png"
 images:
   - "/src/assets/camera/hikvision/DS-7616NI-Q2_16P/DS-7616NI-Q2_16P.png"
